--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
         <div class="body">
             <ul>
-                <li><a href="/assets/CV_Reza Zuliansyah Sobirin.pdf" target="_blank">CV</a></li>
-                <li><a href="/assets/Portofolio_Reza Zuliansyah Sobirin.pdf" target="_blank">Portofolio</a></li>
+                <li><a href="assets/CV_Reza Zuliansyah Sobirin.pdf" target="_blank">CV</a></li>
+                <li><a href="assets/Portofolio_Reza Zuliansyah Sobirin.pdf" target="_blank">Portofolio</a></li>
                 <li><a href="https://www.linkedin.com/in/reza-zuliansyah-sobirin/" target="_blank">LinkedIn</a></li>
                 <li><a href="https://github.com/RezaZull" target="_blank">Github</a></li>
                 <li><a href="https://www.instagram.com/reza.zull" target="_blank">Instagram</a></li>
